# texly

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
deploy/: CAPROVER.md  btrfs-backup.sh  btrfs-restore.sh  snapper-texly.conf
deploy/fontconfig/: 99-texly.conf  README.md  texly-fonts.tex
design/: Texly.html
src/: archive.rs  auth.rs  compile.rs  error.rs  files.rs  fonts.rs  log_parser.rs  main.rs  models.rs  users.rs
static/: index.html  login.html
static/js/: editor.bundle.js  entry.js
