[package]
name = "texly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "texly"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
time = "0.3"
dashmap = "6"
mime_guess = "2"
zip = { version = "2", features = ["deflate"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
rand = "0.8"
dotenvy = "0.15"
